--- a/react-pgt/public/css/Wg/WgDropDown.css
+++ b/react-pgt/public/css/Wg/WgDropDown.css
@@ -45,7 +45,7 @@
 
 /* 8.2 basic layout of the content / 'menu' */
 
-.content {
+.WgDropDown .content {
     position: absolute;
     font-size: 12px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.4);
